# rust_yew_frontend

./: Cargo.toml  README.md  index.html
src/: contexts.rs  hooks.rs  main.rs
src/api/: crates.rs  mod.rs  rustaceans.rs  user.rs
src/components/: alert.rs  button.rs  crate_form.rs  crate_list.rs  header.rs  input.rs  login_form.rs  mod.rs  rustacean_form.rs  rustacean_list.rs  select.rs  sidebar.rs  textarea.rs
src/pages/: home.rs  login.rs  mod.rs  not_found.rs
src/pages/crates/: add.rs  delete.rs  edit.rs  index.rs
src/pages/rustaceans/: add.rs  delete.rs  edit.rs  index.rs  mod.rs
