[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3" , features = ["HtmlInputElement"] }
gloo-console = "0.3"
gloo-net = "0.5"
serde = "1.0"
serde_json = "1.0"